the active rules now will be shown in a Table, not sure if I picked the right numbers - too tired for now
Signed-off-by: sch1zo <andreas.eger.reg@googlemail.com>